# just-one-init

./: .dockerignore  .fast-conventional.yaml  .rustfmt.toml  CHANGELOG.md  Cargo.toml  Dockerfile  Justfile  README.md  cog.toml  cosign.key  cosign.pub  test.sh
.github/: dependabot.yaml
.github/workflows/: ci.yaml
k8s/service-account/: kustomization.yaml  role-binding.yaml  role.yaml  service-account.yaml
src/: main.rs  process_launcher.rs  status_server.rs
