[package]
name = "just-one-init"
version = "0.1.0"
edition = "2021"
license = "CC0-1.0"
repository = "https://github.com/PurpleBooth/just-one-init"
description = "An init for kubernetes that uses leases to ensure only one pod is running"
keywords = ["kubernetes", "init", "lease", "leader-election"]
categories = ["system", "parallelism", "concurrency"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube-leader-election = { version = "0.22.0" }
tracing = "0.1"
tracing-subscriber = "0.3"
miette = { version = "5.8.0", features = ["fancy"] }
tokio = { version = "1.28.2", features = ["full", "tracing"] }
kube = { version = "0.82.2", default-features = false, features = ["client", "rustls-tls"] }
k8s-openapi = { version = "0.18.0", features = ["v1_26"] }
rand = "0.8.4"
clap = { version = "4.3.1", features = ["derive", "cargo", "env"] }
