[package]
name = "just-one-init"
version = "0.1.0"
edition = "2021"
license = "CC0-1.0"
repository = "https://github.com/PurpleBooth/just-one-init"
description = "An init for kubernetes that uses leases to ensure only one pod is running"
keywords = ["kubernetes", "init", "lease", "leader-election"]
categories = ["system", "parallelism", "concurrency"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube-leader-election = "0.23.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "json", "local-time"] }
miette = { version = "5.9.0", features = ["fancy"] }
tokio = { version = "1.28.2", features = ["full", "tracing"] }
kube = { version = "0.83.0", default-features = false, features = ["client", "rustls-tls"] }
k8s-openapi = { version = "0.18.0", features = ["v1_26"] }
rand = "0.8.5"
clap = { version = "4.3.3", features = ["derive", "cargo", "env"] }
axum = { version = "0.6.18", features = ["tracing", "http2", ] }
serde_json = "1.0.96"
shellwords = "1.1.0"
tracing-futures = { version = "0.2.5" }
tower-http = { version = "0.4.0", features = ["tracing", "compression-br", "compression-deflate", "compression-gzip", "compression-zstd"] }
tower = "0.4.13"
which = "4.4.0"
